Correct footer alignment

--- a/styles.css
+++ b/styles.css
@@ -206,4 +206,5 @@ footer {
     text-align: center;
     width: 100%;
     max-width: 900px;
+    margin-inline: auto;
 }
